reports/notebooks2.log
Traceback (most recent call last):
  File "C:\Users\Home\AppData\Local\Programs\Python\Python310\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\Home\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\Home\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\Home\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\Home\AppData\Local\Programs\Python\Python310\lib\asyncio\base_events.py", line 641, in run_until_complete
    return future.result()
  File "C:\Users\Home\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 558, in async_execute
    await self.async_execute_cell(
  File "C:\Users\Home\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\Users\Home\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
df.rename(columns={”city_mpg”: “city-L/100km”}, inplace=True)
------------------

[1;36m  File [1;32m"C:\Users\Home\AppData\Local\Temp/ipykernel_9900/1305195304.py"[1;36m, line [1;32m1[0m
[1;33m    df.rename(columns={”city_mpg”: “city-L/100km”}, inplace=True)[0m
[1;37m                       ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid character '”' (U+201D)

SyntaxError: invalid character '”' (U+201D) (Temp/ipykernel_9900/1305195304.py, line 1)

